<resources>
    <string name="app_name">AntKotlinProject</string>
    <string name="ant">ANT</string>
    <string name="subtitle">здесь наш заголовок\nили слоган</string>
    <string name="enter">Войти</string>
    <string name="first_time_here">Впервые здесь ?</string>
    <string name="sign_up">Создать аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Назад</string>
    <string name="then">Далее</string>
    <string name="done">Готово</string>
    <string name="entrance">Вход</string>
    <string name="write_login">Введите логин</string>
    <string name="write_password">Введите пароль</string>
    <string name="who_are_you">Кем вы являетесь?</string>
    <string name="pupil">Ученик</string>
    <string name="teacher">Учитель</string>
    <string name="registration">Регистрация</string>
    <string name="write_name">Введите имя</string>
    <string name="write_surname">Введите фамилию</string>
    <string name="write_email">Введите email</string>
    <string name="come_up_login">Придумайте логин</string>
    <string name="come_up_password">Придумайте пароль</string>
    <string name="check_password">Подтвердите пароль</string>
    <string name="search">Поиск</string>
    <string name="my_courses">Мои курсы</string>
    <string name="profile">Профиль</string>
    <string name="search_by_categories">Искать по категориям</string>
    <string name="all_courses">Все курсы</string>
    <string name="empty_courses">У вас пока нет курсов</string>
    <string name="subcategories">Подкатегории</string>
    <string name="about_course">О курсе</string>
    <string name="professor">Преподаватель</string>
    <string name="feedback">Отзывы</string>
    <string name="show_all">показать все</string>
    <string name="max_rang">из 5.0</string>
    <string name="min_rang">0.0</string>
    <string name="add_course">Добавить курс</string>
    <string name="edit">Редактировать</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Электронная почта</string>
    <string name="profile_editing">Редактирование профиля</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="write_phone">Введите номер телефона</string>
    <string name="create">Создать</string>
    <string name="add_preview_course_image">Добавить заставку курса</string>
    <string name="course_name">Название курса*</string>
    <string name="course_description">Описание курса*</string>
    <string name="course_price">Стоимость курса</string>
    <string name="add_preview_course_video">Добавить вступительное видео</string>
    <string name="price_in_som">*Указывайте цену в сомах</string>
    <string name="lessons_count">Кол-во уроков</string>
    <string name="congrats">Поздравляем</string>
    <string name="course_created">Курс успешно создан!</string>
    <string name="welcome">Вы успешно зарегистрировались!</string>
    <string name="buy">Купить</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="choose_video">Выбрать видео</string>
    <string name="camera">Сфотографировать</string>
    <string name="video">Снять видео</string>
    <string name="my_api_key">apikey</string>
    <string name="add_lesson">Добавить урок в ленту</string>
</resources>