<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert_dialog">

    <TextView
        android:id="@+id/title"
        style="@style/title_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/profile_editing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:hint="@string/write_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:hint="@string/write_surname"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:hint="@string/write_phone"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_surname" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:hint="@string/write_email"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <Button
        android:id="@+id/btn_negative"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/btn_alert_negative"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/color_light_green"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_positive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <Button
        android:id="@+id/btn_positive"
        android:layout_width="@dimen/dp_150"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/bg_btn_auth_positive"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_negative"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

</androidx.constraintlayout.widget.ConstraintLayout>