<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_368"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginTop="@dimen/dp_32"
    android:layout_marginEnd="@dimen/dp_16"
    app:cardCornerRadius="@dimen/dp_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_light_green">

        <TextView
            android:id="@+id/tv_who"
            style="@style/auth_white_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_34"
            android:text="@string/who_are_you"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_teacher"
            style="@style/reg_user_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_54"
            android:text="@string/teacher"
            app:layout_constraintTop_toBottomOf="@id/tv_who" />

        <Button
            android:id="@+id/btn_pupil"
            style="@style/reg_user_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/pupil"
            app:layout_constraintTop_toBottomOf="@id/btn_teacher" />

        <Button
            android:id="@+id/btn_negative"
            style="@style/auth_white_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/btn_pupil"
            app:layout_constraintTop_toBottomOf="@id/btn_pupil" />

        <Button
            android:id="@+id/btn_positive"
            style="@style/auth_white_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@android:color/transparent"
            android:text="@string/then"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_pupil"
            app:layout_constraintTop_toBottomOf="@id/btn_pupil" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>