<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_368"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginTop="@dimen/dp_32"
    android:layout_marginEnd="@dimen/dp_16"
    app:cardCornerRadius="@dimen/dp_16"
    tools:context=".ui.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_light_green">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_entrance"
            style="@style/auth_white_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_34"
            android:text="@string/entrance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login"
            style="@style/login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_54"
            android:hint="@string/write_login"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tv_entrance" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_login"
            android:hint="@string/write_password"
            android:layout_marginTop="@dimen/dp_8"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_42"
                android:inputType="textPassword"
                style="@style/login_edit_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_negative"
            style="@style/auth_white_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/et_login"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <Button
            android:id="@+id/btn_positive"
            style="@style/auth_white_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/bg_btn_auth_positive"
            android:text="@string/done"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_login"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>