<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.bottomnavigation.profile.ProfileFragment">

    <TextView
        android:id="@+id/title"
        style="@style/title_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <ImageButton
        android:id="@+id/btn_left_account"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/ic_left_account"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <View
        android:id="@+id/line_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5f"
        android:background="@color/color_green"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/photo_container"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        app:layout_constraintTop_toBottomOf="@id/line_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_24"
        app:cardCornerRadius="@dimen/dp_200">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_grey_transparent" />
        
        <ImageButton
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center"
            android:background="@drawable/ic_photo"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/photo_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_16"
        tools:text="Your Name"
        style="@style/title_black"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="username"
        style="@style/subtitle_grey"/>
    
    <LinearLayout
        android:id="@+id/btn_edit"
        android:layout_width="@dimen/dp_131"
        android:layout_height="@dimen/dp_32"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="horizontal"
        android:background="@drawable/bg_btn_edit">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/edit"
            android:textAllCaps="false"
            style="@style/text_btn_edit"
            android:layout_marginStart="@dimen/dp_8"/>
        
        <ImageButton
            android:layout_width="@dimen/dp_16"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_edit"
            android:layout_marginStart="@dimen/dp_8"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_edit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_54"
        android:text="@string/phone_number"
        style="@style/text_btn_edit"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_phone_number"
        app:layout_constraintBottom_toBottomOf="@id/tv_phone_number"
        app:layout_constraintStart_toEndOf="@id/tv_phone_number"
        android:layout_marginStart="@dimen/dp_24"
        tools:text="@string/phone_number"
        style="@style/subtitle_green_10sp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/email"
        style="@style/text_btn_edit"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_email"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toEndOf="@id/tv_email"
        android:layout_marginStart="@dimen/dp_24"
        tools:text="@string/email"
        style="@style/subtitle_green_10sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>